feat: add CORS configuration, implement resend-otp, profile, and sign-out endpoints, and centralize application properties